--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <script src="./dist/app.js" type="module"></script>
-    <link href=".dist/bundle.css" />
-    <link href=".static/global.css" />
+    <link rel="stylesheet" href="./dist/bundle.css" />
+    <link rel="stylesheet" href="./static/global.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@300;400;700&display=swap"
       rel="stylesheet"
     />
   </head>
